execution_sample_out/substitution_cipher/009.txt
Error:
  File "/tmp/tmp_3qrjfyu.py", line 124
    dp[j] = dp[j +1}
                   ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['
